fixed spacing on connection dummy cards and removed some unneeded comments

--- a/src/components/connections/Connections.css
+++ b/src/components/connections/Connections.css
@@ -199,6 +199,13 @@ Bright Blue: #c4f7fe highlights, hover on links, and buttons
   border-top-right-radius: 5px;
 }
 
+.dummy-container {
+  background-color: white;
+  margin: 0px 20px;
+  padding: 0px;
+  border-bottom: 1px solid gray;
+}
+
 .container-connections {
   background-color: white;
   margin: 0px 20px;
